--- a/CSS/main.scss
+++ b/CSS/main.scss
@@ -1,11 +1,10 @@
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-}
-body{
-    padding: 0 0 0 0 ;
-}
 
 @import "variables";
 @import "mixins";
+@import "global";
+@import "header";
+@import "files";
+@import "productive";
+@import "access";
+@import "contact";
+@import "footer";
