--- a/CSS/_files.scss
+++ b/CSS/_files.scss
@@ -48,4 +48,40 @@
 
 /* TABLET LANDSCAPE / DESKTOP */
 @media only screen and (min-width: 1024px) {
+    .files{
+        display: flex;
+        flex-direction: row-reverse;
+        align-items: center;
+        margin-bottom: 9.5em;
+        article{
+            h1{
+                font-size: 3.2rem;
+                text-align: left;
+                margin-bottom: .5em;
+                margin-top: -1.5em;
+            }
+            p{
+                text-align: left;
+                font-size: 1.6em;
+            }
+        }
+        img{
+            width: 50%;
+        }
+        .get_started{
+            flex-direction: row;
+            align-items: center;
+            justify-content: flex-start;
+            .email{
+                width: 55%;
+                margin-bottom: 0;
+            }
+            .button{
+                margin-bottom: 0;
+                width: 30%;
+                padding: 1em 0em 1em 0em;
+                margin-left: 1em;
+            }
+        }
+    }
 }
