--- a/CSS/_contact.scss
+++ b/CSS/_contact.scss
@@ -41,4 +41,31 @@
 
 /* TABLET LANDSCAPE / DESKTOP */
 @media only screen and (min-width: 1024px) {
+    .contact_wrap{
+        padding-top: 5em;
+        padding-bottom: 3em;
+        margin-left: -18.8%;
+    }
+    .contact{
+        @include center;
+        justify-content: space-between;
+        align-items: flex-start;
+        padding: 0px !important;
+        width: 60%;
+        .contact_part{
+            p{
+                margin-bottom: 0.5em;
+            }
+        }
+        .contact_part:nth-child(2),.contact_part:nth-child(3){
+            margin-top: 5em;
+            align-self: flex-end;
+        }
+        .contact_part:nth-child(3){
+            margin-bottom: 4.35em;
+        }
+        .social_media{
+            margin-top: 5em;
+        }
+    }
 }
