--- a/CSS/_header.scss
+++ b/CSS/_header.scss
@@ -22,4 +22,13 @@
 
 /* TABLET LANDSCAPE / DESKTOP */
 @media only screen and (min-width: 1024px) {
+    header{
+        padding-top: 3.5em;
+        img{
+            width: 10%;
+        }
+        nav{
+            width: 20%;
+        }
+    }
 }
