--- a/CSS/_productive.scss
+++ b/CSS/_productive.scss
@@ -87,4 +87,68 @@
 
 /* TABLET LANDSCAPE / DESKTOP */
 @media only screen and (min-width: 1024px) {
+    .curves{
+        .mobile_curve{
+            display: none;
+        }
+        .desktop_curve{
+            display: block;
+        }
+    }
+    .productive_wrap{
+        padding-top: 5em;
+        padding-bottom: 3.5em;
+    }
+    .productive{
+        display: flex;
+        flex-direction: row-reverse;
+        align-items: center;
+        article{
+            width: 54%;
+            margin-top: -4em;
+            h1,p{
+                text-align: left;
+            }
+            h1{
+                font-size: 3.5rem;
+                margin-bottom: 1em;
+            }
+            p{
+                font-size: 1.3rem;
+                width: 75%;
+            }
+            .how_works{
+                justify-content: flex-start;
+                &::before{
+                    left: 0;
+                    bottom: -25%;
+                    width: 31.5%;
+                }
+            }
+        }
+        img{
+            width: 46%;
+        }
+        .twitter{
+            width: 45%;
+            p{
+                font-size: 1rem;
+                width: 95%;
+                margin-bottom: 1.5em;
+            }
+            .user{
+                align-items: center;
+                img{
+                    width: 3rem;
+                }
+                .user_data{
+                    p{
+                        width: 100%;
+                        font-size: .8em;
+                    }
+                }
+            }
+        }
+
+    }
 }
