--- a/CSS/main.css
+++ b/CSS/main.css
@@ -17,8 +17,8 @@ body {
 
 @media only screen and (min-width: 300px) {
   section, header, footer {
-    max-width: 320px;
-    width: 100%;
+    max-width: 1400px;
+    width: 85%;
     margin: auto;
   }
   img {
@@ -27,6 +27,14 @@ body {
 }
 
 /* TABLET LANDSCAPE / DESKTOP */
+@media only screen and (min-width: 1024px) {
+  section, header, footer {
+    max-width: 1920px;
+    width: 90%;
+    margin: auto;
+  }
+}
+
 /* SMARTPHONES PORTRAIT */
 @media only screen and (min-width: 300px) {
   header {
@@ -69,6 +77,18 @@ body {
 }
 
 /* TABLET LANDSCAPE / DESKTOP */
+@media only screen and (min-width: 1024px) {
+  header {
+    padding-top: 3.5em;
+  }
+  header img {
+    width: 10%;
+  }
+  header nav {
+    width: 20%;
+  }
+}
+
 /* SMARTPHONES PORTRAIT */
 @media only screen and (min-width: 300px) {
   .files {
@@ -134,6 +154,57 @@ body {
 }
 
 /* TABLET LANDSCAPE / DESKTOP */
+@media only screen and (min-width: 1024px) {
+  .files {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: row-reverse;
+            flex-direction: row-reverse;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    margin-bottom: 9.5em;
+  }
+  .files article h1 {
+    font-size: 3.2rem;
+    text-align: left;
+    margin-bottom: .5em;
+    margin-top: -1.5em;
+  }
+  .files article p {
+    text-align: left;
+    font-size: 1.6em;
+  }
+  .files img {
+    width: 50%;
+  }
+  .files .get_started {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+  }
+  .files .get_started .email {
+    width: 55%;
+    margin-bottom: 0;
+  }
+  .files .get_started .button {
+    margin-bottom: 0;
+    width: 30%;
+    padding: 1em 0em 1em 0em;
+    margin-left: 1em;
+  }
+}
+
 @media only screen and (min-width: 300px) {
   .productive_wrap {
     background-color: #f6f6fe;
@@ -238,6 +309,79 @@ body {
 }
 
 /* TABLET LANDSCAPE / DESKTOP */
+@media only screen and (min-width: 1024px) {
+  .curves .mobile_curve {
+    display: none;
+  }
+  .curves .desktop_curve {
+    display: block;
+  }
+  .productive_wrap {
+    padding-top: 5em;
+    padding-bottom: 3.5em;
+  }
+  .productive {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: row-reverse;
+            flex-direction: row-reverse;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .productive article {
+    width: 54%;
+    margin-top: -4em;
+  }
+  .productive article h1, .productive article p {
+    text-align: left;
+  }
+  .productive article h1 {
+    font-size: 3.5rem;
+    margin-bottom: 1em;
+  }
+  .productive article p {
+    font-size: 1.3rem;
+    width: 75%;
+  }
+  .productive article .how_works {
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+  }
+  .productive article .how_works::before {
+    left: 0;
+    bottom: -25%;
+    width: 31.5%;
+  }
+  .productive img {
+    width: 46%;
+  }
+  .productive .twitter {
+    width: 45%;
+  }
+  .productive .twitter p {
+    font-size: 1rem;
+    width: 95%;
+    margin-bottom: 1.5em;
+  }
+  .productive .twitter .user {
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .productive .twitter .user img {
+    width: 3rem;
+  }
+  .productive .twitter .user .user_data p {
+    width: 100%;
+    font-size: .8em;
+  }
+}
+
 @media only screen and (min-width: 300px) {
   .access_wrap {
     background-color: #585989;
@@ -270,6 +414,62 @@ body {
 }
 
 /* TABLET LANDSCAPE / DESKTOP */
+@media only screen and (min-width: 1024px) {
+  .access_wrap {
+    padding-top: 4em;
+    padding-bottom: 2.5em;
+  }
+  .access {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .access .get_started {
+    width: 50%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .access .get_started .email, .access .get_started .button {
+    -webkit-box-shadow: 0px 0px 49px 0px rgba(0, 0, 0, 0.25);
+            box-shadow: 0px 0px 49px 0px rgba(0, 0, 0, 0.25);
+  }
+  .access .get_started .email {
+    width: 70%;
+    padding: .8em 0em .8em 1em;
+    margin-bottom: 1.3em;
+  }
+  .access .get_started .button {
+    width: 30%;
+    padding: 1em 0em 1em 0em;
+    margin-left: -40%;
+  }
+  .access article {
+    width: 50%;
+  }
+  .access article h1, .access article p {
+    text-align: left;
+  }
+  .access article h1 {
+    font-size: 2.5rem;
+    margin-bottom: 1em;
+  }
+  .access article p {
+    width: 75%;
+    font-size: 1.3rem;
+  }
+}
+
 @media only screen and (min-width: 300px) {
   .contact_wrap {
     background-color: #070439;
@@ -330,6 +530,47 @@ body {
 }
 
 /* TABLET LANDSCAPE / DESKTOP */
+@media only screen and (min-width: 1024px) {
+  .contact_wrap {
+    padding-top: 5em;
+    padding-bottom: 3em;
+    margin-left: -18.8%;
+  }
+  .contact {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+    padding: 0px !important;
+    width: 60%;
+  }
+  .contact .contact_part p {
+    margin-bottom: 0.5em;
+  }
+  .contact .contact_part:nth-child(2), .contact .contact_part:nth-child(3) {
+    margin-top: 5em;
+    -ms-flex-item-align: end;
+        align-self: flex-end;
+  }
+  .contact .contact_part:nth-child(3) {
+    margin-bottom: 4.35em;
+  }
+  .contact .social_media {
+    margin-top: 5em;
+  }
+}
+
 @media only screen and (min-width: 300px) {
   footer {
     padding: 1em 0em 1em 0em;
